# cpp_prefix_sum

./: CMakeLists.txt  LICENSE.md  alligned_alloc.hpp  avx2_prefix.hpp  avx2_shift.cpp  intrinsics_prefix_sum.hpp  main.cpp  pure_cpp_prefix_sum.hpp  vcpkg.json
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark_intrinsics.cpp  benchmark_pure_cpp.cpp
cmake/: CompilerWarnings.cmake  EnableIntrinsics.cmake  EnableVectorization.cmake
