find_package(benchmark CONFIG REQUIRED)

add_executable(benchmark_pure_cpp benchmark_pure_cpp.cpp)
target_link_libraries(benchmark_pure_cpp benchmark::benchmark CompilerFlags OpenMP::OpenMP_CXX)
add_executable(benchmark_intrinsics benchmark_intrinsics.cpp)
target_link_libraries(benchmark_intrinsics benchmark::benchmark CompilerFlags)
